Website updates and changes. 20 April 2025 Updated PHP code for homepage and manage users webpage. Fixed "Is admin?" radio buttons spacing for database query webpage. Fixed grammar errors in database query webpage. Optimized some codes of database query webpage. Added new file at "css/manage-users.css". Completed manage users webpage, except edit and delete.
To-do:
Add a function to display that the account is not registered in the database for login page.
Rework mailing list function.

--- a/css/manage-users.css
+++ b/css/manage-users.css
@@ -3,12 +3,12 @@
 Start of the lines/blocks of codes
 Developed by M1
 Student ID: Redacted
- */
+*/
 
-/* Database query title banner */
+/* Manage users title banner */
 .title-banner-container {
     height: 75px;
-    width: 60%;
+    width: 45%;
     background-color: lightgreen;
     border-style: solid;
     text-align: center;
@@ -28,8 +28,33 @@ Student ID: Redacted
     margin-top: 12px;
 }
 
-/* query-table-content-1 */
-.query-table-content-1 table {
+#contents-1-container {
+    /*
+    A hidden container to ensure the contents tabs animations (if any)
+    do not push the footer down and affect the overall website design.
+    */
+    display: flex;
+    justify-content: center;
+    gap: 50px;
+    height: 200px;
+}
+
+#contents-1-content {
+    height: 150px;
+    width: 100%;
+    border-style: solid;
+    border-radius: 20px;
+    float: left;
+    /* padding-left: 20px; */
+    margin-left: 5px;
+    margin-right: 5px;
+    border-width: 2px;
+    text-align: center;
+    background-color: lightyellow;
+}
+
+/* Table query designs */
+.query-table-content table {
     border: 2px solid black;
     border-collapse: separate;
     border-spacing: 0;
@@ -37,36 +62,36 @@ Student ID: Redacted
     overflow: hidden;
 }
 
-.query-table-content-1 th {
+.query-table-content th {
     background-color: rgb(150, 255, 150);
 }
 
-.query-table-content-1 td {
+.query-table-content td {
     background-color: rgb(225, 255, 225);
 }
 
-.query-table-content-1 tr {
+.query-table-content tr {
     height: 40px;
 }
 
-.query-table-content-1 th,
-.query-table-content-1 td {
+.query-table-content th,
+.query-table-content td {
     border: 1px solid black;
 }
 
-.query-table-content-1 th {
+.query-table-content th {
     width: 40%;
     padding-left: 10px;
     text-align: left;
 }
 
-.query-table-content-1 td {
+.query-table-content td {
     width: 375px;
     padding: 10px;
 }
 
-/* query-table-content-2 */
-.query-table-content-2 table {
+/* Manage users table designs */
+.manage-user-table table {
     border: 2px solid black;
     border-collapse: separate;
     border-spacing: 0;
@@ -74,85 +99,46 @@ Student ID: Redacted
     overflow: hidden;
 }
 
-.query-table-content-2 th {
+.manage-user-table th {
     background-color: rgb(150, 255, 150);
 }
 
-.query-table-content-2 td {
+.manage-user-table td {
     background-color: rgb(225, 255, 225);
 }
 
-.query-table-content-2 tr {
+.manage-user-table tr {
     height: 40px;
 }
 
-.query-table-content-2 th,
-.query-table-content-2 td {
+.manage-user-table th,
+.manage-user-table td {
     border: 1px solid black;
 }
 
-.query-table-content-2 th {
-    width: 40%;
-    padding-left: 10px;
-    text-align: left;
-}
-
-.query-table-content-2 td {
-    width: 375px;
-    padding: 10px;
-}
-
-/* query-table-content-3 */
-.query-table-content-3 table {
-    border: 2px solid black;
-    border-collapse: separate;
-    border-spacing: 0;
-    border-radius: 10px;
-    overflow: hidden;
-}
-
-.query-table-content-3 th {
-    background-color: rgb(150, 255, 150);
-}
-
-.query-table-content-3 td {
-    background-color: rgb(225, 255, 225);
-}
-
-.query-table-content-3 tr {
-    height: 40px;
-}
-
-.query-table-content-3 th,
-.query-table-content-3 td {
-    border: 1px solid black;
-}
-
-.query-table-content-3 th {
+.manage-user-table th {
     padding-left: 10px;
     padding-right: 10px;
     text-align: left;
 }
 
-.query-table-content-3 td {
+.manage-user-table td {
     padding: 10px;
 }
 
-.query-table-email-field {
-    width: 350px;
-    font-size: 18px;
-}
-
-.table-names-cb {
-    width: 350px;
-    font-size: 18px;
-}
-
+/* Input text fields designs */
 input[type="text"] {
     width: 350px;
     font-size: 18px;
 }
 
+/* Input email address text field designs */
+.query-table-email-field {
+    width: 350px;
+    font-size: 18px;
+}
+
+/* Radio buttons designs */
 .radio-choice {
     height: 50px;
 }
@@ -166,17 +152,12 @@ input[type="text"] {
     height: 30px;
 }
 
-.hidden-div {
-    height: 40px;
-}
-
-.subscription-text-field {
-    width: 80%;
-    font-size: 16px;
+form {
+    margin: 0 auto;        /* Center the form horizontally */
 }
 
 /* 
 End of the lines/blocks of codes
 Developed by M1
 Student ID: Redacted
- */
+*/
